homeとnewsのみタスクを振った。残りの部分は少し大まかにタスクを作成。

--- a/contact.html
+++ b/contact.html
@@ -12,18 +12,15 @@
         <!-- タスク２ -->
     </header>
     <main>
-        <div class="newspage">
+        <div class="contactpage">
             <section class="top_banner">
-                <!-- タスク８ -->
-            </section>
-            <section class="allnews">
-                <!-- タスク１１ -->
+                <!-- タスク３ -->
             </section>
             
         </div>
     </main>
     <footer>
-        <!-- タスク９ -->
+        <!-- タスク１０ -->
     </footer>
 </body>
 </html>
