--- a/service.html
+++ b/service.html
@@ -12,24 +12,12 @@
         <!-- タスク２ -->
     </header>
     <main>
-        <div class="homepage">
-            <section class="top_about">
+        <div class="servicepage">
+            <section class="top_banner">
                 <!-- タスク３ -->
             </section>
-            <section class="services">
-                <!-- タスク４ -->
-            </section>
-            <section class="workspace">
-                <!-- タスク５ -->
-            </section>
-            <section class="events">
-                <!-- タスク６ -->
-            </section>
-            <section class="news">
-                <!-- タスク７ -->
-            </section>
-            <section class="contact">
-                <!-- タスク９ -->
+            <section class="contents">
+
             </section>
         </div>
     </main>
