ガイドを修正

--- a/about.html
+++ b/about.html
@@ -18,7 +18,8 @@
             <section class="top_banner">
                 <!-- タスク12 -->
             </section>
-            
+            <!-- ここから下にタスク15 -->
+            <!-- ここから上にタスク15 -->
         </div>
     </main>
     <footer>
