--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,8 @@
             <section class="top_banner">
                 <!-- タスク12 -->
             </section>
-            
+            <!-- ここから下にタスク16 -->
+            <!-- ここから上ににタスク16 -->
         </div>
     </main>
     <footer>
