--- a/workspace.html
+++ b/workspace.html
@@ -18,13 +18,15 @@
             <section class="top_banner">
                 <!-- タスク12 -->
             </section>
-            <section class="contents">
+            <!-- ここから下にタスク14 -->
+            <section class="contents"><!-- 適宜追加 -->
 
             </section>
+            <!-- ここから上にタスク14 -->
         </div>
     </main>
     <footer>
-        <!-- タスク１０ -->
+        <!-- タスク10 -->
     </footer>
     <script src="./jquery/jquery-3.4.1.min.js"></script>
     <script src="./bootstrap/js/bootstrap.min.js"></script>
