--- a/service.html
+++ b/service.html
@@ -18,9 +18,10 @@
             <section class="top_banner">
                 <!-- タスク12 -->
             </section>
-            <section class="contents">
-
+            <!-- ここから下にタスク13 -->
+            <section class="contents"> <!-- 適宜追加 -->
             </section>
+            <!-- ここから上にタスク13 -->
         </div>
     </main>
     <footer>
