--- a/index.html
+++ b/index.html
@@ -5,14 +5,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <!-- bootstrap4 -->
-    <!-- <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"> -->
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <!-- css -->
     <link rel="stylesheet" href="style.css">
+    <!-- bootstrap4 -->
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 </head>
 <body>
     <header>
         <!-- タスク２ -->
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <a class="navbar-brand" href="#">
+                <img src="/images/lagoon_logo.png" height="30" alt="lagoon_logo">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="nav-center navbar-nav mr-auto justify-content-center">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">最新消息</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">主要服務</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">空間方案</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">○○Lagoon</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">○○○○</a>
+                    </li>
+                </ul>
+                <ul class="nav-right navbar-nav mr-auto">
+                    <li class="nav-item nav-info-button">
+                        <a class="nav-link" href="#">活動情報</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#"><img src="/images/user-regular.svg" alt="user-regular" height="30"></a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#"><img src="/images/search-solid.svg" alt="search-solid" height="30"></a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
     </header>
     <main>
         <div class="homepage">
