コードを挿入してみました。

--- a/index.html
+++ b/index.html
@@ -20,7 +20,54 @@
                 <!-- タスク３ -->
             </section>
             <section class="services">
-                <!-- タスク４ -->
+                <div class="container services-container">
+                    <div class="services-title">
+                        <p>Service</p>
+                        <h2>提供する</h2>
+                    </div>
+                    <div class="container">
+                        <div class="row service-contents">
+                            <a href="#" class="col-lg-3 col-md-4 col-12 py-5 service-box1 text-decoration-none text-dark">
+                                <div class="mb-3 text-center service-content-img"><i class="fas fa-comments"></i></div>
+                                <div class="service-content">
+                                    <h3 class="text-center hover-change">創業相談</h3>
+                                    <p class="text-secondary text-center">地元企業 / 食品事業 / 社会サービス</p>
+                                    <br>
+                                    <p class="text-justify">【企業したいけど、いろいろな不安を抱えて一歩踏み出せない】</p>
+                                    <p class="text-justify"> 個人的なカウンセリングの提供に加えて、セミナーやワークショップはさまざまな
+                                        属性に基づいて編成されます。</p>
+                                </div>
+                            </a>
+                            <a href="#" class="col-lg-3 col-md-4 col-12 py-5 service-box2 text-decoration-none text-dark">
+                                <div class="mb-3 text-center service-content-img"><i class="fas fa-laptop-code"></i></div>
+                                <div class="service-content">
+                                    <h3 class="text-center hover-change">栽培コース</h3>
+                                    <p class="text-secondary text-center">programming / WordPress / ウェブ制作</p>
+                                    <br>
+                                    <p class="text-justify">【Webエンジニアになりたい】</p>
+                                    <p class="text-justify">
+                                        コースの目的はプログラミングを学ぶことではなく、プログラミング
+                                        の仕組みと背景を学び、卒業後にエンジニアになることです。
+                                    </p>
+                                </div>
+                            </a>
+                            <a href="#" class="col-lg-3 col-md-4 col-12 py-5 service-box3 text-decoration-none text-dark">
+                                <div class="mb-3 text-center service-content-img"><i class="fas fa-print"></i></div>
+                                <div class="service-content">
+                                    <h3 class=" text-center hover-change">KOZA MAKERS</h3>
+                                    <p class="text-secondary text-center">地元企業 / 食品事業 / 社会サービス</p>
+                                    <br>
+                                    <p class="text-justify">【アイデアを物理的な作品に変えたい】</p>
+                                    <p class="text-justify">
+                                        機械装置を提供するだけでなく、データの作成方法を教えたり、
+                                        装置の使用に関する定期的な講義やワークショップを開催したり
+                                        します。
+                                    </p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </section>
             <section class="workspace">
                 <!-- タスク５ -->
