cssを挿入しました

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <!-- <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+
+    <script src="https://kit.fontawesome.com/3d41a84b31.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
