footerの左側を作成

--- a/index.html
+++ b/index.html
@@ -76,6 +76,21 @@
     </main>
     <footer>
         <!-- タスク１０ -->
+        <div class="footer-wrapper">
+            <div class="footer-left-wrapper">
+                <img class="footer-logo" src="images/lagoon_logo.png" alt="lagoonlogo">
+                <div class="footer-info">
+                    <p>沖縄県沖縄市中央1丁目7-8</p>
+                    <p>050-3556-6900</p>
+                    <p>MON-SUN<span>13:00-21:00</span>[水曜日定休]</p>
+                    <p>メールアドレス：info@lagoon-koza.org</p>
+                </div>
+            </div>
+            <div class="footer-right-wrapper">
+                <p>twitter</p>
+            </div>
+        </div>
+        <small></small>
     </footer>
     <script src="./jquery/jquery-3.4.1.min.js"></script>
     <script src="./bootstrap/js/bootstrap.min.js"></script>
