--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,7 @@
     <!-- bootstrap4 -->
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 </head>
+
 <body>
     <header>
         <!-- タスク２ -->
@@ -17,7 +19,8 @@
             <a class="navbar-brand" href="#">
                 <img src="images/lagoon_logo.png" height="30" alt="lagoon_logo">
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -61,7 +64,30 @@
                 <!-- タスク４ -->
             </section>
             <section class="workspace">
-                <!-- タスク５ -->
+                <div class="container-fluid wrap">
+                    <div class="inner">
+                        <!-- タスク5 -->
+                        <div class="row">
+                            <div class="col-md-12 workspace-title">
+                                <h2>
+                                    施設概要
+                                </h2>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12 workspace-text">
+                                <p>
+                                    1F｜無料コワーキングスペース<br>
+                                    2F｜有料会員専用シェアオフィス<br>
+                                    リモートワーク、カフェ利用、打ち合わせ、勉強等など、<br>
+                                    様々な用途で利用可能なコワーキングスペースです。<br>
+                                    有料会員スペースは、お得な会員特典をご用意しております。
+                                </p>
+                                <a href="#" class="btn">シェアオフィス詳細一覧</a>
+                            </div>
+                        </div>
+                    </div>
+                </div><!-- /wrap-->
             </section>
             <section class="events">
                 <!-- タスク６ -->
@@ -77,7 +103,10 @@
     <footer>
         <!-- タスク１０ -->
     </footer>
+
     <script src="./jquery/jquery-3.4.1.min.js"></script>
     <script src="./bootstrap/js/bootstrap.min.js"></script>
+
 </body>
+
 </html>
