fontawesomeの読み込み

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="style.css">
     <!-- bootstrap4 -->
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <!-- fontawesomeの読み込み -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" integrity="sha384-v8BU367qNbs/aIZIxuivaU55N5GPF89WBerHoGA4QTcbUjYiLQtKdrfXnqAcXyTv" crossorigin="anonymous">
 </head>
 <body>
     <header>
@@ -87,10 +89,12 @@
                 </div>
             </div>
             <div class="footer-right-wrapper">
+                <p>facebook</p>
+                <p>instagram</p>
                 <p>twitter</p>
             </div>
+            <small>@ Copyright 2019.Startup Lab Lagoon - All Rights Reserved</small>
         </div>
-        <small></small>
     </footer>
     <script src="./jquery/jquery-3.4.1.min.js"></script>
     <script src="./bootstrap/js/bootstrap.min.js"></script>
