全体のレイアウトを整えて、グーグルフォントを導入

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <!-- fontawesomeの読み込み -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" integrity="sha384-v8BU367qNbs/aIZIxuivaU55N5GPF89WBerHoGA4QTcbUjYiLQtKdrfXnqAcXyTv" crossorigin="anonymous">
+    <!-- googleフォントの読み込み -->
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -80,20 +83,20 @@
         <!-- タスク１０ -->
         <div class="footer-wrapper">
             <div class="footer-left-wrapper">
-                <img class="footer-logo" src="images/lagoon_logo.png" alt="lagoonlogo">
+                <img class="footer-logo" src="images/lagoon-white.png" alt="lagoonlogo">
                 <div class="footer-info">
                     <p>沖縄県沖縄市中央1丁目7-8</p>
                     <p>050-3556-6900</p>
-                    <p>MON-SUN<span>13:00-21:00</span>[水曜日定休]</p>
-                    <p>メールアドレス：info@lagoon-koza.org</p>
+                    <p>MON-SUN 13:00-21:00 [水曜日定休]</p>
+                    <p>info@lagoon-koza.org</p>
                 </div>
+                <small>@ Copyright 2020.Startup Lab Lagoon - All Rights Reserved</small>
             </div>
             <div class="footer-right-wrapper">
-                <p>facebook</p>
-                <p>instagram</p>
-                <p>twitter</p>
+                <i class="fab fa-2x fa-facebook-square facebook"></i>
+                <i class="fab fa-2x fa-instagram instagram"></i>
+                <i class="fab fa-2x fa-twitter twitter"></i>
             </div>
-            <small>@ Copyright 2019.Startup Lab Lagoon - All Rights Reserved</small>
         </div>
     </footer>
     <script src="./jquery/jquery-3.4.1.min.js"></script>
