--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
             <section class="top_about">
                 <!-- タスク３ -->
             </section>
+            <section class="news">
+                <!-- タスク７ yabu -->
+                
+            </section>
             <section class="services">
                 <div class="container services-container">
                     <div class="services-title">
@@ -140,9 +144,6 @@
             </section>
             <section class="events">
                 <!-- タスク６ -->
-            </section>
-            <section class="news">
-                <!-- タスク７ -->
             </section>
             <section class="contact">
                 <!-- タスク９ -->
