--- a/index.html
+++ b/index.html
@@ -10,50 +10,92 @@
     <link rel="stylesheet" href="style.css">
     <!-- bootstrap4 -->
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-
+    
     <script src="https://kit.fontawesome.com/3d41a84b31.js" crossorigin="anonymous"></script>
 </head>
-
 <body>
-    <header>
-        <!-- タスク２ -->
-        <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand" href="#">
-                <img src="images/lagoon_logo.png" height="30" alt="lagoon_logo">
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+    <header class="fixed-top">
+        <nav class="navbar navbar-expand-lg">
+            <div class="header-tb-left">
+                <img src="images/lagoon_logo.JPG" alt="lagoon_logo" class="logo">
+            </div>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="nav-center navbar-nav mr-auto justify-content-center">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">最新消息</a>
+                <ul class="navbar-nav">
+                    <li class="nav-item news">
+                        <a class="nav-link" href="#">ニュース</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">主要服務</a>
+                    <li class="nav-item service">
+                        <a class="nav-link" href="#">施設サービス</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">空間方案</a>
+                    <li class="nav-item space">
+                        <a class="nav-link" href="#">コワーキングスペース</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">○○Lagoon</a>
+                    <li class="nav-item access">
+                        <a class="nav-link" href="#">アクセス</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">○○○○</a>
+                    <li class="nav-item about">
+                        <a class="nav-link" href="#">lagoonとは</a>
+                    </li>
+                    <li class="nav-item event">
+                        <a class="nav-link" href="#">イベント</a>
+                    </li>
+                    <li class="nav-item contact">
+                        <a class="nav-link" href="#">予約問い合わせ</a>
+                    </li>
+                    <li class="nav-item search dropdown">
+                        <div class="hover-img dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <img class="search hover-none" src="images/icon-search-normal.png" alt="icon-search-normal">
+                            <img class="search hover-block" src="images/icon-search-hover.png">
+                        </div>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <input type="search" name="search" placeholder="キーワードを入力してください…">
+                        </div>
+                    </li>
+                    <ul class="tb sns">
+                        <li class="tb-fb none">
+                            <div class="hover-img">
+                                <img class="hover-none" src="images/icon-fb-normal.png" alt="icon-fb-normal">
+                                <img class="hover-block" src="images/icon-fb-hover.png" alt="icon-fb-normal">
+                            </div>
+                        </li>
+                        <li class="tb-ins none">
+                            <div class="hover-img">
+                                <img class="hover-none" src="images/footer-ins.png" alt="footer-ins"> <!--ない -->
+                                <img class="hover-block" src="images/footer-ins.png" alt="footer-ins"> <!--ない -->
+                            </div>
+                        </li>
+                        <li class="tb-twitter none">
+                            <div class="hover-img">
+                                <img class="hover-none" src="images/icon-twitter-normal.png" alt="icon-twitter-normal">
+                                <img class="hover-block" src="images/icon-twitter-hover.png" alt="icon-twitter-normal">
+                            </div>
+                        </li>
+                    </ul>
+                </ul>
+            </div>
+            <div class="header-tb-right">
+                <ul class="tb header">
+                    <li class="tb-contact">
+                        <a href="#">予約問い合わせ</a>
+                    </li>
+                    <li class="tb-event">
+                        <a href="#">イベント</a>
                     </li>
                 </ul>
-                <ul class="nav-right navbar-nav mr-auto">
-                    <li class="nav-item nav-info-button">
-                        <a class="nav-link" href="#">活動情報</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#"><img src="images/user-regular.svg" alt="user-regular" height="30"></a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#"><img src="images/search-solid.svg" alt="search-solid" height="30"></a>
-                    </li>
-                </ul>
+                <div class="search hover-img none dropdown dropdown-toggle"  type="button" id="dropdownMenuButtontb" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <img class="hover-none" src="images/icon-search-normal.png" alt="icon-search-normal">
+                    <img class="hover-block" src="images/icon-search-hover.png" alt="icon-search-normal">
+                </div>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButtontb">
+                        <input type="search" name="search" placeholder="キーワードを入力してください…">
+                    </div>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <div class="cancel hover-img">
+                        <img class="cancel none hover-none" src="images/icon-cancel-normal.png" alt="icon-cancel-norma">
+                        <img class="cancel hover-block" src="images/icon-cancel-hover.png" alt="icon-cancel-norma">
+                    </div>
+                    <img class="buger" src="images/icon-buger.png" alt="icon-buger">
+                </button>
             </div>
         </nav>
     </header>
@@ -155,7 +197,7 @@
 
     <script src="./jquery/jquery-3.4.1.min.js"></script>
     <script src="./bootstrap/js/bootstrap.min.js"></script>
-
+    <script src="./js/header.js"></script>
 </body>
 
 </html>
