floatを使って配置し直した

--- a/index.html
+++ b/index.html
@@ -90,13 +90,15 @@
                     <p>MON-SUN 13:00-21:00 [水曜日定休]</p>
                     <p>info@lagoon-koza.org</p>
                 </div>
-                <small>@ Copyright 2020.Startup Lab Lagoon - All Rights Reserved</small>
             </div>
             <div class="footer-right-wrapper">
                 <i class="fab fa-2x fa-facebook-square facebook"></i>
                 <i class="fab fa-2x fa-instagram instagram"></i>
                 <i class="fab fa-2x fa-twitter twitter"></i>
             </div>
+        </div>
+        <div class="small">
+            <small>@ Copyright 2020.Startup Lab Lagoon - All Rights Reserved</small>
         </div>
     </footer>
     <script src="./jquery/jquery-3.4.1.min.js"></script>
