修正しました

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="fixed-top">
         <nav class="navbar navbar-expand-lg">
             <div class="header-tb-left">
-                <img src="images/lagoon_logo.JPG" alt="lagoon_logo" class="logo">
+                <a href="#"><img src="images/lagoon_logo.JPG" alt="lagoon_logo" class="logo"></a>
             </div>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
@@ -48,23 +48,24 @@
                             <img class="search hover-block" src="images/icon-search-hover.png">
                         </div>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <div class="hr"></div>
                             <input type="search" name="search" placeholder="キーワードを入力してください…">
                         </div>
                     </li>
-                    <ul class="tb sns">
-                        <li class="tb-fb none">
+                    <ul class="tb-sns none">
+                        <li class="tb-fb">
                             <div class="hover-img">
                                 <img class="hover-none" src="images/icon-fb-normal.png" alt="icon-fb-normal">
                                 <img class="hover-block" src="images/icon-fb-hover.png" alt="icon-fb-normal">
                             </div>
                         </li>
-                        <li class="tb-ins none">
+                        <li class="tb-ins">
                             <div class="hover-img">
                                 <img class="hover-none" src="images/footer-ins.png" alt="footer-ins"> <!--ない -->
                                 <img class="hover-block" src="images/footer-ins.png" alt="footer-ins"> <!--ない -->
                             </div>
                         </li>
-                        <li class="tb-twitter none">
+                        <li class="tb-twitter ">
                             <div class="hover-img">
                                 <img class="hover-none" src="images/icon-twitter-normal.png" alt="icon-twitter-normal">
                                 <img class="hover-block" src="images/icon-twitter-hover.png" alt="icon-twitter-normal">
@@ -87,6 +88,7 @@
                     <img class="hover-block" src="images/icon-search-hover.png" alt="icon-search-normal">
                 </div>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButtontb">
+                        <div class="hr"></div>
                         <input type="search" name="search" placeholder="キーワードを入力してください…">
                     </div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
