--- a/index.html
+++ b/index.html
@@ -127,50 +127,148 @@
                 </div>
             </section>
             <section class="services">
-                <div class="container services-container">
+                <div class="container-fluid services-container">
                     <div class="services-title">
-                        <p>Service</p>
-                        <h2>提供する</h2>
+                        <p class="services-title-p">Service</p>
+                        <h2>サービス</h2>
                     </div>
-                    <div class="container">
-                        <div class="row service-contents">
-                            <a href="#" class="col-lg-3 col-md-4 col-12 py-5 service-box1 text-decoration-none text-dark">
-                                <div class="mb-3 text-center service-content-img"><i class="fas fa-comments"></i></div>
+                    <div class="service-wrap">
+                        <div class="">
+                            <p>企業支援・ICT人材育成・モノづくりに関するイベントを開催しています。</p>
+                        </div>
+                        <div class="service-contents">
+
+
+                            <a href="#" class="service-box1 text-decoration-none">
                                 <div class="service-content">
-                                    <h3 class="text-center hover-change">創業相談</h3>
-                                    <p class="text-secondary text-center">地元企業 / 食品事業 / 社会サービス</p>
-                                    <br>
-                                    <p class="text-justify">【企業したいけど、いろいろな不安を抱えて一歩踏み出せない】</p>
-                                    <p class="text-justify"> 個人的なカウンセリングの提供に加えて、セミナーやワークショップはさまざまな
-                                        属性に基づいて編成されます。</p>
+                                    <div class="text-center service-content-img">
+                                        <img src="images/img-headset.png" alt="">
+                                    </div>
+                                    <div>
+                                        <h3>創業相談</h3>
+                                        <p class="text-color-gray">地元企業 / 食品事業 / 社会サービス</p>
+                                    </div>
+                                </div>
+                                <p class="text-justify">
+                                    【起業したいけど、いろいろな不安を抱えて一歩踏み出せない】<br>
+                                    個人的なカウンセリングの提供に加えて、セミナーやワークショップはさまざまな属性に基づいて編成されます。 </p>
+                                <div class="service-border-link">
                                 </div>
                             </a>
-                            <a href="#" class="col-lg-3 col-md-4 col-12 py-5 service-box2 text-decoration-none text-dark">
-                                <div class="mb-3 text-center service-content-img"><i class="fas fa-laptop-code"></i></div>
+
+
+                            <a href="#" class="service-box2 text-decoration-none">
                                 <div class="service-content">
-                                    <h3 class="text-center hover-change">栽培コース</h3>
-                                    <p class="text-secondary text-center">programming / WordPress / ウェブ制作</p>
-                                    <br>
-                                    <p class="text-justify">【Webエンジニアになりたい】</p>
-                                    <p class="text-justify">
-                                        コースの目的はプログラミングを学ぶことではなく、プログラミング
-                                        の仕組みと背景を学び、卒業後にエンジニアになることです。
-                                    </p>
+                                    <div class="text-center service-content-img">
+                                        <img src="images/img-book.png" alt="">
+                                    </div>
+                                    <div>
+                                        <h3>栽培コース</h3>
+                                        <p class="text-color-gray text-center">programming / WordPress / ウェブ制作</p>
+                                    </div>
+                                </div>
+                                <p class="text-justify">
+                                    【Webエンジニアになりたい】<br>
+                                    コースの目的はプログラミングを学ぶことではなく、
+                                    プログラミングの仕組みと背景を学び、卒業後にエンジニアになることです。
+                                </p>
+                                <div class="service-border-link">
                                 </div>
                             </a>
-                            <a href="#" class="col-lg-3 col-md-4 col-12 py-5 service-box3 text-decoration-none text-dark">
-                                <div class="mb-3 text-center service-content-img"><i class="fas fa-print"></i></div>
+
+
+                            <a href="#" class="service-box3 text-decoration-none">
                                 <div class="service-content">
-                                    <h3 class=" text-center hover-change">KOZA MAKERS</h3>
-                                    <p class="text-secondary text-center">地元企業 / 食品事業 / 社会サービス</p>
-                                    <br>
-                                    <p class="text-justify">【アイデアを物理的な作品に変えたい】</p>
-                                    <p class="text-justify">
-                                        機械装置を提供するだけでなく、データの作成方法を教えたり、
-                                        装置の使用に関する定期的な講義やワークショップを開催したり
-                                        します。
-                                    </p>
+                                    <div class="text-center service-content-img">
+                                        <img src="images/img-maker.png" alt="">
+                                    </div>
+                                    <div>
+                                        <h3>KOZA MAKERS</h3>
+                                        <p class="text-color-gray text-center">レーザーカッター / 3Dプリンター</p>
+                                    </div>
                                 </div>
+                                <p class="text-justify">
+                                    【アイデアを物理的な作品に変えたい】<br>
+                                    機械装置を提供するだけでなく、データの作成方法を教えたり、
+                                    装置の使用に関する定期的な講義やワークショップを開催したりします
+                                </p>
+                                <div class="service-border-link">
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- スマホ時に表示する -->
+                <div class="container-fluid service-section-sp">
+                    <div class="cp_actab service-sp-collapse">
+                        <input id="collapse-one" type="radio" name="tabs2">
+                        <label for="collapse-one">
+                            <div class="service-content-sp">
+                                <div class="service-content-img">
+                                    <img src="images/img-headset.png" alt="">
+                                </div>
+                                <div>
+                                    <h3 class="hover-change">創業相談</h3>
+                                    <p class="color-gray">地元企業 / 食品事業 / 社会サービス</p>
+                                </div>
+                            </div>
+                        </label>
+                        <div class="cp_actab-content service-sp-collapse-content">
+                            <p class="text-justify">
+                                【起業したいけど、いろいろな不安を抱えて一歩踏み出せない】<br>
+                                個人的なカウンセリングの提供に加えて、セミナーやワークショップはさまざまな属性に基づいて編成されます。
+                            </p>
+                            <a href="">
+                                <img src="images/btn-more-normal.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="cp_actab service-sp-collapse">
+                        <input id="collapse-two" type="radio" name="tabs2">
+                        <label for="collapse-two">
+                            <div class="service-content-sp">
+                                <div class="service-content-img">
+                                    <img src="images/img-book.png" alt="">
+                                </div>
+                                <div>
+                                    <h3 class="hover-change">栽培コース</h3>
+                                    <p class="color-gray">programming / WordPress / ウェブ制作</p>
+                                </div>
+                            </div>
+                        </label>
+                        <div class="cp_actab-content service-sp-collapse-content">
+                            <p class="text-justify">
+                                【Webエンジニアになりたい】<br>
+                                コースの目的はプログラミングを学ぶことではなく、
+                                プログラミングの仕組みと背景を学び、卒業後にエンジニアになることです。
+                            </p>
+                            <a href="">
+                                <img src="images/btn-more-normal.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="cp_actab service-sp-collapse">
+                        <input id="collapse-three" type="radio" name="tabs2">
+                        <label for="collapse-three">
+                            <div class="service-content-sp">
+                                <div class="service-content-img">
+                                    <img src="images/img-maker.png" alt="">
+                                </div>
+                                <div>
+                                    <h3 class="hover-change">KOZA MAKERS</h3>
+                                    <p class="color-gray">レーザーカッター / 3Dプリンター</p>
+                                </div>
+                            </div>
+                        </label>
+                        <div class="cp_actab-content service-sp-collapse-content">
+                            <p class="text-justify">【アイデアを物理的な作品に変えたい】<br>
+                                機械装置を提供するだけでなく、データの作成方法を教えたり、
+                                装置の使用に関する定期的な講義やワークショップを開催したり
+                                します。
+                            </p>
+                            <a href="">
+                                <img src="images/btn-more-normal.png" alt="">
                             </a>
                         </div>
                     </div>
