--- a/index.html
+++ b/index.html
@@ -61,6 +61,20 @@
         <div class="homepage">
             <section class="top_about">
                 <!-- タスク３ -->
+                <div class="container">
+                    <div class="about-title">
+                        <h1>ラグーンとは？</h1>
+                    </div>
+                    <div class="about-text">
+                        <h3>Lagoon</h3>
+                        <p>「Startup Lab Lagoon」は人と人が共創し新たなイノベーショ<br>
+                            ンが起こる社会インフラを目指しています。<br>
+                            起業家の想いに「寄り添い」、失敗にも成功にも「伴走」しま<br>
+                            す。
+                        </p>
+                        <a href="#" class="btn"><span class="mgr-20">Lagoonを利用する</span><img src="../images/btn.png"></a>
+                    </div>
+                </div>
             </section>
             <section class="services">
                 <div class="container services-container">
