--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                 </div>
             </section>
             <section class="workspace">
-                <div class="container-fluid wrap">
+                <div class="container wrap">
                     <div class="inner">
                         <!-- タスク5 -->
                         <div class="row">
