ホームworkspaceのレスポンシブ調整

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                 </div>
             </section>
             <section class="workspace">
-                <div class="container wrap">
+                <div class="container-fluid wrap">
                     <div class="inner">
                         <!-- タスク5 -->
                         <div class="row">
@@ -295,8 +295,8 @@
                                 <p>
                                     1F｜無料コワーキングスペース<br>
                                     2F｜有料会員専用シェアオフィス<br>
-                                    リモートワーク、カフェ利用、打ち合わせ、勉強等など、<br>
-                                    様々な用途で利用可能なコワーキングスペースです。<br>
+                                    リモートワーク、カフェ利用、打ち合わせ、勉強等など、<br class="pc-only">
+                                    様々な用途で利用可能なコワーキングスペースです。<br class="pc-only">
                                     有料会員スペースは、お得な会員特典をご用意しております。
                                 </p>
                                 <a href="#" class="btn">シェアオフィス詳細一覧</a>
