レスポンシブ

--- a/index.html
+++ b/index.html
@@ -15,90 +15,100 @@
     </head>
 
     <body>
-        <header class="fixed-top">
-            <nav class="navbar navbar-expand-lg">
-                <div class="header-tb-left">
-                    <a href="#"><img src="images/lagoon_logo.JPG" alt="lagoon_logo" class="logo"></a>
-                </div>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav">
-                        <li class="nav-item news">
-                            <a class="nav-link" href="#">ニュース</a>
-                        </li>
-                        <li class="nav-item service">
-                            <a class="nav-link" href="#">施設サービス</a>
-                        </li>
-                        <li class="nav-item space">
-                            <a class="nav-link" href="#">コワーキングスペース</a>
-                        </li>
-                        <li class="nav-item access">
-                            <a class="nav-link" href="#">アクセス</a>
-                        </li>
-                        <li class="nav-item about">
-                            <a class="nav-link" href="#">lagoonとは</a>
-                        </li>
-                        <li class="nav-item event">
-                            <a class="nav-link" href="#">イベント</a>
-                        </li>
-                        <li class="nav-item contact">
-                            <a class="nav-link" href="#">予約問い合わせ</a>
-                        </li>
-                        <li class="nav-item search dropdown">
-                            <div class="hover-img dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <img class="search hover-none" src="images/icon-search-normal.png" alt="icon-search-normal">
-                                <img class="search hover-block" src="images/icon-search-hover.png">
-                            </div>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                <div class="hr"></div>
-                                <input type="search" name="search" placeholder="キーワードを入力してください…">
-                            </div>
-                        </li>
-                        <ul class="tb-sns none">
-                            <li class="tb-fb">
-                                <div class="hover-img">
-                                    <img class="hover-none" src="images/icon-fb-normal.png" alt="icon-fb-normal">
-                                    <img class="hover-block" src="images/icon-fb-hover.png" alt="icon-fb-normal">
+        <header>
+            <nav class="navbar navbar-expand-md">
+                <div class="nav-header">
+                    <div class="header-tb-left">
+                        <a href="#"><img src="images/lagoon_logo.JPG" alt="lagoon_logo" class="logo"></a>
+                    </div>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav">
+                            <li class="nav-item news">
+                                <a class="nav-link" href="#">ニュース</a>
+                            </li>
+                            <li class="nav-item service">
+                                <a class="nav-link" href="#">施設サービス</a>
+                            </li>
+                            <li class="nav-item space">
+                                <a class="nav-link" href="#">コワーキングスペース</a>
+                            </li>
+                            <li class="nav-item access">
+                                <a class="nav-link" href="#">アクセス</a>
+                            </li>
+                            <li class="nav-item about">
+                                <a class="nav-link" href="#">lagoonとは</a>
+                            </li>
+                            <li class="nav-item event">
+                                <a class="nav-link" href="#">イベント</a>
+                            </li>
+                            <li class="nav-item contact">
+                                <a class="nav-link" href="#">予約問い合わせ</a>
+                            </li>
+                            <li class="nav-item search dropdown">
+                                <div class="hover-img dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <img class="search hover-none" src="images/icon-search-normal.png" alt="icon-search-normal">
+                                    <img class="search hover-block" src="images/icon-search-hover.png">
+                                </div>
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                    <div class="hr"></div>
+                                    <input type="search" name="search" placeholder="キーワードを入力してください…">
+                                    <div class="search-cancel hover-img">
+                                        <img class="hover-none" src="images/icon-cancel-normal.png" alt="icon-cancel-normal">
+                                        <img class="hover-block" src="images/icon-cancel-hover.png" alt="icon-cancel-normal">
+                                    </div>
                                 </div>
                             </li>
-                            <li class="tb-ins">
-                                <div class="hover-img">
-                                    <img class="hover-none" src="images/footer-ins.png" alt="footer-ins"> <!--ない -->
-                                    <img class="hover-block" src="images/footer-ins.png" alt="footer-ins"> <!--ない -->
-                                </div>
+                            <ul class="tb-sns none">
+                                <li class="tb-fb">
+                                    <div class="hover-img">
+                                        <img class="hover-none" src="images/icon-fb-normal.png" alt="icon-fb-normal">
+                                        <img class="hover-block" src="images/icon-fb-hover.png" alt="icon-fb-normal">
+                                    </div>
+                                </li>
+                                <li class="tb-ins">
+                                    <div class="hover-img">
+                                        <img class="hover-none" src="images/icon-ins-normal.png" alt="footer-ins"> <!--ない -->
+                                        <img class="hover-block" src="images/icon-ins-normal.png" alt="footer-ins"> <!--ない -->
+                                    </div>
+                                </li>
+                                <li class="tb-twitter ">
+                                    <div class="hover-img">
+                                        <img class="hover-none" src="images/icon-twitter-normal.png" alt="icon-twitter-normal">
+                                        <img class="hover-block" src="images/icon-twitter-hover.png" alt="icon-twitter-normal">
+                                    </div>
+                                </li>
+                            </ul>
+                        </ul>
+                    </div>
+                    <div class="header-tb-right">
+                        <ul class="tb header">
+                            <li class="tb-contact">
+                                <a href="#">予約問い合わせ</a>
                             </li>
-                            <li class="tb-twitter ">
-                                <div class="hover-img">
-                                    <img class="hover-none" src="images/icon-twitter-normal.png" alt="icon-twitter-normal">
-                                    <img class="hover-block" src="images/icon-twitter-hover.png" alt="icon-twitter-normal">
-                                </div>
+                            <li class="tb-event">
+                                <a href="#">イベント</a>
                             </li>
                         </ul>
-                    </ul>
-                </div>
-                <div class="header-tb-right">
-                    <ul class="tb header">
-                        <li class="tb-contact">
-                            <a href="#">予約問い合わせ</a>
-                        </li>
-                        <li class="tb-event">
-                            <a href="#">イベント</a>
-                        </li>
-                    </ul>
-                    <div class="search hover-img none dropdown dropdown-toggle"  type="button" id="dropdownMenuButtontb" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <img class="hover-none" src="images/icon-search-normal.png" alt="icon-search-normal">
-                        <img class="hover-block" src="images/icon-search-hover.png" alt="icon-search-normal">
+                        <div class="search hover-img none dropdown dropdown-toggle"  type="button" id="dropdownMenuButtontb" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <img class="hover-none" src="images/icon-search-normal.png" alt="icon-search-normal">
+                            <img class="hover-block" src="images/icon-search-hover.png" alt="icon-search-normal">
+                        </div>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButtontb">
+                                <div class="hr"></div>
+                                <input type="search" name="search" placeholder="キーワードを入力してください…">
+                                <div class="search-cancel hover-img">
+                                    <img class="hover-none" src="images/icon-cancel-normal.png" alt="icon-cancel-normal">
+                                    <img class="hover-block" src="images/icon-cancel-hover.png" alt="icon-cancel-normal">
+                                </div>
+                            </div>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                            <div class="cancel hover-img">
+                                <img class="cancel none hover-none" src="images/icon-cancel-normal.png" alt="icon-cancel-norma">
+                                <img class="cancel hover-block" src="images/icon-cancel-hover.png" alt="icon-cancel-norma">
+                            </div>
+                            <img class="buger" src="images/icon-buger.png" alt="icon-buger">
+                        </button>
                     </div>
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButtontb">
-                            <div class="hr"></div>
-                            <input type="search" name="search" placeholder="キーワードを入力してください…">
-                        </div>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <div class="cancel hover-img">
-                            <img class="cancel none hover-none" src="images/icon-cancel-normal.png" alt="icon-cancel-norma">
-                            <img class="cancel hover-block" src="images/icon-cancel-hover.png" alt="icon-cancel-norma">
-                        </div>
-                        <img class="buger" src="images/icon-buger.png" alt="icon-buger">
-                    </button>
                 </div>
             </nav>
         </header>
