コンフリクトを修正2

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                                 </li>
                                 <li class="tb-ins">
                                     <div class="hover-img">
-                                        <img class="hover-none" src="images/icon-ins-normal.png" alt="footer-ins"> <!--ない -->
-                                        <img class="hover-block" src="images/icon-ins-normal.png" alt="footer-ins"> <!--ない -->
+                                        <img class="hover-none" src="images/icon-ins-normal.png" alt="footer-ins">
+                                        <img class="hover-block" src="images/icon-ins-normal.png" alt="footer-ins">
                                     </div>
                                 </li>
                                 <li class="tb-twitter ">
