--- a/index.html
+++ b/index.html
@@ -280,26 +280,29 @@
                 </div>
             </section>
             <section class="workspace">
-                <div class="container-fluid wrap">
+                <div class="wrap">
                     <div class="inner">
                         <!-- タスク5 -->
-                        <div class="row">
-                            <div class="col-md-12 workspace-title">
+                        <!-- <div class="row"> -->
+                            <div class="workspace-title">
                                 <h2>
                                     施設概要
                                 </h2>
                             </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-12 workspace-text">
-                                <p>
-                                    1F｜無料コワーキングスペース<br>
-                                    2F｜有料会員専用シェアオフィス<br>
-                                    リモートワーク、カフェ利用、打ち合わせ、勉強等など、<br class="pc-only">
-                                    様々な用途で利用可能なコワーキングスペースです。<br class="pc-only">
-                                    有料会員スペースは、お得な会員特典をご用意しております。
-                                </p>
-                                <a href="#" class="btn">シェアオフィス詳細一覧</a>
+                        <!-- </div> -->
+                        <div class="workspace-content container-fluid">
+                            <div class="row">
+                                <div class="col-sm-7 workspace-text">
+                                    <p>
+                                        1F｜無料コワーキングスペース<br>
+                                        2F｜有料会員専用シェアオフィス<br>
+                                        リモートワーク、カフェ利用、打ち合わせ、勉強等など、<br class="pc-only">
+                                        様々な用途で利用可能なコワーキングスペースです。<br class="pc-only">
+                                        有料会員スペースは、お得な会員特典をご用意しております。
+                                    </p>
+                                    <a href="#" class="btn">シェアオフィス詳細一覧</a>
+                                </div>
+                                <div class="col-sm-5"></div>
                             </div>
                         </div>
                     </div>
