--- a/index.html
+++ b/index.html
@@ -366,6 +366,14 @@
                 </section>
             </div>
         </main>
+        <div id="arrow_top">
+            <a href="#">
+                <img src="images/btn-arrow-top.png"
+                srcset="images/btn-arrow-top@2x.png 2x,
+                        images/btn-arrow-top@3x.png 3x"
+                class="btn_arrow_top">
+            </a>
+        </div>
         <footer>
             <!-- タスク１０ -->
             <div class="footer-wrapper">
@@ -391,6 +399,7 @@
         <script src="./jquery/jquery-3.4.1.min.js"></script>
         <script src="./bootstrap/js/bootstrap.min.js"></script>
         <script src="./js/header.js"></script>
+        <script src="./js/arrow_top.js"></script>
 </body>
 
 </html>
