--- a/index.html
+++ b/index.html
@@ -304,7 +304,16 @@
                 <!-- タスク６ -->
             </section>
             <section class="contact">
-                <!-- タスク９ -->
+                <div class="contact-text">
+                    <h3>Startup Lab lagoon KOZA</h3>
+                    <div class="contact-text-detail">
+                        <p>沖縄県沖縄市中央1丁目7-8</p>
+                        <p>050-3556-6900</p>
+                        <p>MON-SUN 13：00-21：00 ［水曜定休日]</p>
+                        <p>info@lagoon-koza.org</p>
+                    </div>
+                </div>
+                <img src="./images/contact.png" alt="contact-image">
             </section>
         </div>
     </main>
