--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
                 </div>
             </nav>
         </header>
+        <canvas class="background"></canvas>
         <main>
             <div class="homepage">
                 <section class="top_about">
@@ -399,10 +400,13 @@
                 <small>@ Copyright 2020.Startup Lab Lagoon - All Rights Reserved</small>
             </div>
         </footer>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js"></script>
         <script src="./jquery/jquery-3.4.1.min.js"></script>
         <script src="./bootstrap/js/bootstrap.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bubbly-bg@1.0.0/dist/bubbly-bg.js"></script>
         <script src="./js/header.js"></script>
         <script src="./js/arrow_top.js"></script>
+        <script src="./js/particles.js"></script>
 </body>
 
 </html>
