写真の追加、変更

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                             <p>info@lagoon-koza.org</p>
                         </div>
                     </div>
-                    <img src="./images/contact.png" alt="contact-image">
+                    <img src="./images/pic-home-contact-desktop@3x.png" alt="contact-image">
                 </section>
             </div>
         </main>
