newsのcss修正。bubble微調整

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                         <div class="events-wrap-sp container-fluid">
                             <div class="home-events-card">
                                 <a href="#">
-                                    <img class="img-fluid" src="images/hongkongGFVL2927_TP_V.jpg" alt="">
+                                    <img class="" src="images/hongkongGFVL2927_TP_V.jpg" alt="">
                                     <div class="home-events-date">
                                         <p>2019/11/10 14:00-17:00</p>
                                     </div>
@@ -316,7 +316,7 @@
                             </div>
                             <div class="home-events-card">
                                 <a href="#">
-                                    <img class="img-fluid" src="images/hongkongGFVL2927_TP_V.jpg" alt="">
+                                    <img class="" src="images/hongkongGFVL2927_TP_V.jpg" alt="">
                                     <div class="home-events-date">
                                         <p>2019/11/10 14:00-17:00</p>
                                     </div>
@@ -330,7 +330,7 @@
                             </div>
                             <div class="home-events-card">
                                 <a href="#">
-                                    <img class="img-fluid" src="images/hongkongGFVL2927_TP_V.jpg" alt="">
+                                    <img class="" src="images/hongkongGFVL2927_TP_V.jpg" alt="">
                                     <div class="home-events-date">
                                         <p>2019/11/10 14:00-17:00</p>
                                     </div>
